view mode chage thymeleaf

--- a/aframework/aframework-web/src/main/webapp/WEB-INF/templates/web/user/index.html
+++ b/aframework/aframework-web/src/main/webapp/WEB-INF/templates/web/user/index.html
@@ -3,7 +3,7 @@
       layout:decorate="~{web/layout/default}">
 
 <head th:replace="web/layout/default :: head(~{this :: title})">
-    <title>Web Home Index</title>
+    <title>User Home Index</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
@@ -15,7 +15,7 @@
 
 
     <div layout:fragment="content">
-        Home Index
+       User  Home Index
     </div>
 
     <div th:replace="~{web/common/footer :: footer}">
