--- a/aframework/aframework-web/src/main/webapp/WEB-INF/templates/web/common/header.html
+++ b/aframework/aframework-web/src/main/webapp/WEB-INF/templates/web/common/header.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<!DOCTYPE html >
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <body>
 <div th:fragment="header">
     <div class="header" style="width:800px;">
@@ -8,6 +9,9 @@
         </div>
     </div>
     <div style="width:400px;float:left;height:100px;">
+        <div th:text="${#authentication.name}">
+            user name
+        </div>
         <a th:href="@{/user/logout}">登出</a>
     </div>
 
