--- a/aframework/aframework-web/src/main/webapp/WEB-INF/templates/web/common/header.html
+++ b/aframework/aframework-web/src/main/webapp/WEB-INF/templates/web/common/header.html
@@ -9,9 +9,14 @@
         </div>
     </div>
     <div style="width:400px;float:left;height:100px;">
-        <div th:text="${#authentication.name}">
-            user name
+
+        <div sec:authorize="isAuthenticated()">
+            <div th:text="${#authentication.name}">
+                user name
+            </div>
         </div>
+
+
         <a th:href="@{/user/logout}">登出</a>
     </div>
 
