--- a/aframework/aframework-web/src/main/webapp/WEB-INF/templates/web/home/index.html
+++ b/aframework/aframework-web/src/main/webapp/WEB-INF/templates/web/home/index.html
@@ -2,16 +2,16 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{web/layout/default}">
 
-<head th:replace="web/layout/default :: head(~{this :: title})">
-    <title>Web Home Index</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+<head>
+    <title> Home Index</title>
+    <script>
+
+    </script>
 </head>
+
 <body>
 
 <div>
-
-    <header th:replace="~{web/common/header :: header}">
-    </header>
 
 
     <div layout:fragment="content">
@@ -24,10 +24,6 @@
         <p>
             <a th:href="@{/home/index}">Front Index</a>
         </p>
-    </div>
-
-    <div th:replace="~{web/common/footer :: footer}">
-        <div>footer</div>
     </div>
 
 
