--- a/aframework/aframework-web/src/main/webapp/WEB-INF/templates/web/user/login.html
+++ b/aframework/aframework-web/src/main/webapp/WEB-INF/templates/web/user/login.html
@@ -2,16 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{web/layout/default}">
 
-<head th:replace="web/layout/default :: head(~{this :: title})">
-    <title>User Home Index</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+<head >
+    <title>User Home Login</title>
 </head>
 <body>
 
 <div>
-
-    <header th:replace="~{web/common/header :: header}">
-    </header>
 
 
     <div layout:fragment="content">
@@ -31,11 +27,6 @@
         </form>
 
         <a href="register">Register</a>
-    </div>
-
-
-    <div th:replace="~{web/common/footer :: footer}">
-        <div>footer</div>
     </div>
 
 
